--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ SHASUMS256.txt
 **/package-lock.json
 compile_commands.json
 .envrc
-
+electron-builder.yml
 # npm package
 /npm/dist
 /npm/path.txt
