--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "spjainelo",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "The new technology by SP Jain – Engaged Learning Online (ELO) – uses a blend of some of today’s most cutting-edge emerging technologies to bring the dynamism and engagement of the SP Jain classroom online and in real time. Our students could be in any part of the world – at home, work, a café or even an airport – by simply logging in to ELO, they get all the benefits of an on-campus education. They can interact with world-class faculty, share ideas with their peers, collaborate on assignments, break out into teams to discuss and debate – all in real time and without any loss of engagement.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder",
     "build": "npm run build --win",
-    "ship": "electron-builder --deb -p always",
-    "ship-linux": "electron-builder --linux -p always --config=electron-builder.yml"
+    "ship": "GH_TOKEN=c32fd3c661d6e0426e51df0721e95befb4c8769b electron-builder  -p always"
   },
   "repository": "https://github.com/ajienfin/virlics-electron-app",
   "keywords": [
@@ -25,7 +24,7 @@
   },
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "5.0.0",
+    "electron": "4.2.10",
     "electron-builder": "^21.2.0"
   },
   "build": {
@@ -35,8 +34,7 @@
       "category": "education",
       "icon": "./build/256x256.png",
       "publish": [
-        "github",
-        "bintray"
+        "github"
       ]
     },
     "win": {
@@ -54,11 +52,16 @@
       "installerHeaderIcon": "./build/logo.bmp",
       "installerSidebar": "./build/banner.bmp",
       "uninstallerSidebar": "./build/banner.bmp"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "ajienfin",
+      "repo": "https://github.com/ajienfin/virlics-electron-app",
+      "token": "c32fd3c661d6e0426e51df0721e95befb4c8769b"
     }
   },
   "dependencies": {
-    "electron-positioner": "^4.1.0",
-    "electron-updater": "^4.1.2",
-    "update-electron-app": "^1.5.0"
+    "electron-localshortcut": "^3.1.0",
+    "electron-updater": "^4.1.2"
   }
 }
